[gd_scene load_steps=11 format=3 uid="uid://ckpwd0gipa5jr"]

[ext_resource type="Script" path="res://misc/spark/spark.gd" id="1_uqoal"]
[ext_resource type="Texture2D" uid="uid://tt3udna5ika2" path="res://misc/spark/spark.png" id="2_qeprh"]

[sub_resource type="Animation" id="Animation_2kalv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1k83t"]
resource_name = "getBig"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_p4mhy"]
resource_name = "getSmall"
step = 0.1

[sub_resource type="Animation" id="Animation_g2d03"]
resource_name = "idle"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 6]
}

[sub_resource type="Animation" id="Animation_svpx1"]
resource_name = "sparkle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_oc7kd"]
resource_name = "spin"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_upth0"]
_data = {
"RESET": SubResource("Animation_2kalv"),
"getBig": SubResource("Animation_1k83t"),
"getSmall": SubResource("Animation_p4mhy"),
"idle": SubResource("Animation_g2d03"),
"sparkle": SubResource("Animation_svpx1"),
"spin": SubResource("Animation_oc7kd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6x603"]
radius = 197.01

[node name="Spark" type="Node2D"]
script = ExtResource("1_uqoal")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_upth0")
}

[node name="Spark" type="Sprite2D" parent="."]
light_mask = 2
texture = ExtResource("2_qeprh")
hframes = 7
vframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6x603")

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
